# beetrace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
beetrace/: __main__.py  beetrace.py
tests/: test_beetrace.py
