[metadata]
name = beetrace
version = 0.1.0
description = Trace your python process line by line with low overhead!
long_description = file: README.md
url = https://github.com/furkanonder/beetrace/
author = Furkan Onder
author_email = furkanonder@protonmail.com
keywords =
    tracer
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Issues = https://github.com/furkanonder/beetrace/issues/
    Changelog = https://github.com/furkanonder/beetrace/CHANGELOG/

[options]
python_requires = >=3.7
include_package_data = true
zip_safe = false
packages = beetrace
install_requires =
    psutil==5.9.4
    rich==13.0.1

[options.entry_points]
console_scripts =
    beetrace = beetrace.__main__:main